# okforge

./: .env.example  .gitignore  AGENTS.md  GETTING_STARTED.md  LICENSE  README.md  config.yaml.example  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
docs/: .gitignore  golden-principles.md
examples/: README.md
examples/chat/: README.md
examples/commands/: README.md
examples/commands/sample-wiki/concepts/: attention-mechanisms.md  positional-encoding.md  transformer-models.md
examples/commands/sample-wiki/entities/: google-brain.md  google-research.md  google.md  nips-2017.md  tensor2tensor.md  university-of-toronto.md  wmt-2014-english-french.md  wmt-2014-english-german.md  wmt-2014.md
examples/commands/sample-wiki/explorations/: how-does-the-transformer-replace-recurrence-with-self-attent.md
examples/commands/sample-wiki/summaries/: attention-is-all-you-need.md
examples/configuration/: README.md
examples/pageindex-cloud/: README.md
examples/skills/: README.md  marketplace.json
examples/skills/transformer-attention/: SKILL.md
examples/skills/transformer-attention/references/: original-transformer-paper.md
examples/slides/: README.md  attention-intro.html
examples/visualize/: README.md  graph.html
okforge/: __init__.py  __main__.py  cli.py  config.py  converter.py  images.py  indexer.py  lint.py  locks.py  mutation.py  okf.py  schema.py  state.py  topic_tree.py  topic_tree_llm.py  tree_renderer.py  url_ingest.py  visualize.py  watcher.py
okforge/agent/: _markdown.py  chat.py  chat_session.py  compiler.py  linter.py  mcp_server.py  query.py  skill_runner.py  skills.py  tools.py
okforge/deck/: __init__.py  creator.py  validator.py
okforge/prompts/: __init__.py  skill_create.md
okforge/skill/: __init__.py  creator.py  evaluator.py  generator.py  marketplace.py  tools.py  validator.py  workspace.py
okforge/templates/: graph.html
openkb/: __init__.py  __main__.py  cli.py  config.py  converter.py  frontmatter.py  indexer.py  links.py  lint.py  locks.py  log.py  mutation.py  okf.py  schema.py  state.py  topic_tree.py  topic_tree_llm.py  tree_renderer.py  url_ingest.py  visualize.py
openkb/agent/: __init__.py  chat.py  chat_session.py  compiler.py  linter.py  query.py  skill_runner.py  skills.py  tools.py
openkb/deck/: __init__.py  creator.py  validator.py
openkb/prompts/: __init__.py
openkb/skill/: __init__.py  creator.py  evaluator.py  generator.py  marketplace.py  tools.py  validator.py  workspace.py
skills/openkb/: SKILL.md
skills/openkb-deck-editorial/: SKILL.md
skills/openkb-html-critic/: SKILL.md
skills/openkb/references/: commands.md  wiki-schema.md
tests/: conftest.py  test_add_command.py  test_agent_tools.py  test_chat_session.py  test_chat_slash_commands.py  test_cli.py  test_compiler.py  test_compiler_topic_tree.py  test_config.py  test_converter.py  test_critique_slash.py  test_cross_platform_locks.py  test_deck_chat_slash.py  test_deck_cli.py  test_deck_creator.py  test_deck_neon_prompt.py  test_deck_package.py  test_deck_prompt.py  test_deck_validator.py  test_feedback.py  test_file_size.py  test_frontmatter.py  test_generator.py  test_grep.py  test_images.py  test_indexer.py  test_links.py  test_lint.py  test_lint_cli.py  test_linter.py  test_list_status.py  test_llm_config_passthrough.py  test_llm_timeout.py  test_locks.py  test_markdown_renderer.py  test_marketplace.py  test_mcp_server.py  test_migrate.py  test_mutation.py  test_query.py  (+26 more)
