[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "okforge"
dynamic = ["version"]
description = "okforge: a local-first LLM knowledge-base engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "designcomputer"},
]
# Original OpenKB authors (upstream, forked from): Kylin <quanqi@pageindex.ai>,
# Ray <ray@vectify.ai>. See README.md "License" for the fork/upstream split.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "rag", "retrieval", "knowledge-base", "llm", "pageindex", "agents", "document"]
# All dependencies are pinned exactly (supply-chain caution — e.g. the
# litellm package-poisoning incident). Bump deliberately after vetting
# each release.
# litellm 1.87.2 fixes the chatgpt/* (ChatGPT subscription) provider
# returning empty Responses output (BerriAI/litellm#25429) and
# auto-injects GitHub Copilot IDE-auth headers.
dependencies = [
    "pageindex==0.3.0.dev1",
    "trafilatura==2.0.0",
    "click==8.4.0",
    "watchdog==6.0.0",
    "litellm==1.87.2",
    "openai-agents==0.17.3",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "json-repair==0.59.10",
    "prompt_toolkit==3.0.52",
    "rich==15.0.0",
    "portalocker==3.2.0",
    # Already pulled in transitively by openai-agents (its MCP *client*),
    # but `okforge mcp` uses it directly as a *server* (FastMCP) — pinned
    # explicitly per this list's own exact-pin policy rather than relying
    # on an incidental transitive version.
    "mcp==1.27.1",
]

[project.urls]
Repository = "https://github.com/okforge/okforge"
Homepage = "https://github.com/okforge/okforge"
Issues = "https://github.com/okforge/okforge/issues"

[project.scripts]
okforge = "okforge.cli:cli"
# Transition alias: the webui (config.OPENKB_BIN) and existing user scripts
# still invoke `openkb`; both entry points point at the same `okforge`
# import package.
openkb = "okforge.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.9.7",
    "mypy==1.15.0",
    "types-PyYAML==6.0.12.20260518",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["okforge"]

# Bundle the built-in deck themes + html critic into the wheel so
# `openkb deck new` / `--critique` / chat `/deck` work right after
# `pip install` (scan_local_skills also looks under okforge/_skills/).
[tool.hatch.build.targets.wheel.force-include]
"skills/openkb-deck-neon" = "okforge/_skills/openkb-deck-neon"
"skills/openkb-deck-editorial" = "okforge/_skills/openkb-deck-editorial"
"skills/openkb-html-critic" = "okforge/_skills/openkb-html-critic"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Start conservative (pyflakes + pycodestyle errors + isort); ratchet up later.
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# cli.py deliberately interleaves imports with side-effecting setup code
# (warning filters that must apply before `litellm` import,
# `set_tracing_disabled()` before other agents-SDK usage, an
# `os.environ.setdefault(...)` that must run before `import litellm`).
# Reordering to satisfy E402/I001 would risk changing import-time behavior,
# so both are ignored here rather than fixed.
#
# E501 (line-too-long) is scoped to the files whose remaining violations are
# long string literals (docstrings, CLI help text, prompt templates) that
# reflowing would either fail to shorten or would alter user-facing text.
# Everywhere else the 100-column limit is enforced. Shrink this list by
# rewrapping the literals (or adding targeted `# noqa: E501`) over time.
"okforge/cli.py" = ["E402", "I001", "E501"]
"okforge/agent/chat.py" = ["E501"]
"okforge/agent/compiler.py" = ["E501"]
"okforge/lint.py" = ["E501"]
"okforge/schema.py" = ["E501"]
# Test fixtures asserting exact file contents (frontmatter/index literals);
# rewrapping the strings would change the data under test.
"tests/test_cli.py" = ["E501"]
"tests/test_compiler.py" = ["E501"]
"tests/test_remove.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["okforge"]
# Lenient to start (codebase not previously type-checked); ratchet up over time.
ignore_missing_imports = true
# numpy's bundled stubs (reached transitively via litellm/openai-agents ->
# pydantic, not imported by okforge directly) use `type X = ...` alias
# statements requiring Python 3.12+ parser support — fatal to the whole run
# (a [syntax] error, not a suppressible diagnostic) when they get parsed. A
# per-module `follow_imports = "skip"` override was experimentally confirmed
# NOT to prevent the parse; only the global default reliably avoids reaching
# that stub, so it stays global rather than scoped narrower.
follow_imports = "skip"

# Pre-existing untyped-data debt is suppressed PER MODULE below (not
# globally), so every other module gets full checking for these error codes.
# Ratchet: fix a module's errors (mostly by giving LLM-JSON payloads proper
# TypedDict/dataclass shapes), then delete its override block.

[[tool.mypy.overrides]]
# Loosely-shaped dict/list data parsed from LLM JSON output flows through
# `Any`-typed helpers: union-attr on Any|None, unannotated accumulator lists,
# argument/return mismatches against str-typed signatures.
module = "okforge.agent.compiler"
disable_error_code = [
    "arg-type",
    "dict-item",
    "operator",
    "return-value",
    "union-attr",
    "var-annotated",
]

[[tool.mypy.overrides]]
module = "okforge.cli"
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = ["okforge.lint", "okforge.indexer"]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "okforge.skill.workspace"
disable_error_code = ["type-var"]
